More wxWidgets style compatibility.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,11 +6,11 @@ find_package(wxWidgets REQUIRED COMPONENTS core base)
 include(${wxWidgets_USE_FILE})
 add_library(${PROJECT_NAME} STATIC
 src/common/imagwebp.cpp
-include/wx/imagwebp.hpp
+include/wx/imagwebp.h
 check_directives.cpp
 )
 target_include_directories(${PROJECT_NAME} PRIVATE include) # find own includes (structure follows wxWidgets' conventions)
-target_compile_definitions(${PROJECT_NAME} PRIVATE wxUSE_IMAGE wxUSE_STREAMS wxUSE_WEBP) # force definitions for stand-alone build (code follows wxWidgets' conventions)
+target_compile_definitions(${PROJECT_NAME} PRIVATE wxUSE_IMAGE wxUSE_STREAMS wxUSE_WEBP wxOVERRIDE=) # force definitions for stand-alone build (code follows wxWidgets' conventions)
 set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 98)
 find_package(WebP CONFIG)
 if (${WebP_FOUND})
