Can read first frame of animated WebP.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 # for testing purposes, this compiles the handler into a static library
-cmake_minimum_required(VERSION 3.19) # TODO: find minimal version
+cmake_minimum_required(VERSION 3.16) # TODO: find minimal version
 set(PROJECT_NAME wxWEBPHandler)
 project(${PROJECT_NAME})
 find_package(wxWidgets REQUIRED COMPONENTS core base)
@@ -13,10 +13,12 @@ target_compile_definitions(${PROJECT_NAME} PRIVATE wxUSE_IMAGE wxUSE_STREAMS wxU
 set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 98)
 find_package(WebP CONFIG)
 if (${WebP_FOUND})
-    target_link_libraries(${PROJECT_NAME} PRIVATE ${wxWidgets_LIBRARIES} WebP::webpdecoder)
+    target_link_libraries(${PROJECT_NAME} PRIVATE ${wxWidgets_LIBRARIES})
 else()
     message(STATUS "WebP: Falling back to prefix search…")
-    find_library(WebP_LIBRARIES webp)
+    find_library(WebP_LIBRARIES_webp webp)
+    find_library(WebP_LIBRARIES_demux webpdemux)
+    set(WebP_LIBRARIES ${WebP_LIBRARIES_webp} ${WebP_LIBRARIES_demux})
     message(STATUS "WebP_LIBRARIES: ${WebP_LIBRARIES}")
     find_path(WebP_INCLUDE_DIRS NAMES "webp/decode.h") 
     message(STATUS "WebP_INCLUDE_DIRS: ${WebP_INCLUDE_DIRS}")
@@ -32,5 +34,5 @@ if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
     target_include_directories(wxWEBPHandlerTest PRIVATE include)
     target_compile_definitions(wxWEBPHandlerTest PRIVATE wxUSE_IMAGE wxUSE_STREAMS wxUSE_WEBP wxOVERRIDE=)
     target_include_directories(wxWEBPHandlerTest PRIVATE ${WebP_INCLUDE_DIRS})
-    target_link_libraries(wxWEBPHandlerTest PRIVATE ${wxWidgets_LIBRARIES} ${WebP_LIBRARIES} ${PROJECT_NAME})
+    target_link_libraries(wxWEBPHandlerTest PRIVATE ${wxWidgets_LIBRARIES} ${PROJECT_NAME})
 endif()
